--- a/planetary_diversity_uniques/localisation/simp_chinese/pd_uniques_l_simp_chinese.yml
+++ b/planetary_diversity_uniques/localisation/simp_chinese/pd_uniques_l_simp_chinese.yml
@@ -197,9 +197,9 @@
  pdbiosynth.230.desc: "尽管这些机械生物试图避开我方监测，我们仍然成功追踪到了一处隐藏在群山间的入口。机械生物后，入口随即关闭；而我们的调查团队靠近时，入口再次开启，仿佛在发起邀请。\n\n团队发现其内部设有先进的工厂和冶炼设施，还有数百个正在进行作业的机械生物。令人不安的是，如此庞大的现金系统竟能避开我们的探测，尤其是考虑到它位于殖民地的地下。设施墙壁发出的声音要求与我们的领袖进行通讯，团队正在建立连接渠道。"
  pdbiosynth.230.a: "显示在屏幕上。"
  pdbiosynth.300.name:0 "收到讯息"
- pdbiosynth.300.desc:0 "§G欢迎§!：我的编号：04单元。欢迎来到这颗星球。\n\n§G感激§!：我观察到贵方对山区发现的受损单位的谨慎处理。贵方进行了细致的扫描，并重置了该单位以使其恢复正常。状态更新：该单位目前已完全恢复运行。贵方的行为被记录为“有益”。作为回报，我提供了一份数据传输。积极行为值得肯定。\n\n§G致意§!：联络既已建立，我愿意回答贵方的任何问题。鉴于该星球目前的状况，我预计贵方会存在一些疑问。"
+ pdbiosynth.300.desc:0 "§G欢迎§!：我的编号：04单元。欢迎来到这颗星球。\n\n§G感激§!：我观察到您的团队对山区发现的受损单位进行了细致的处理。贵方进行了详细的扫描，并重置了该单位以使其恢复正常。状态更新：该单位目前已完全恢复运行。贵方的行为被记录为“有益”。作为回报，我提供了一份数据传输。积极行为值得肯定。\n\n§G致意§!：联络既已建立，我愿意回答您的任何问题。鉴于该星球目前的状况，我预计您会存在一些疑问。"
  pdbiosynth.300.a:0 "谢谢。你是谁？"
- pdbiosynth.305.desc:0 "§G中立§!：我的编号：04单元。欢迎来到这颗星球。\n\n§G[Disappointed]§!：我观察到贵方摧毁了我的一个造物。这一行动并无必要；所有相关数据本可通过非侵入性扫描获得。我不愿见证任何生命的白白损失——不论有机体还是机械体，这有悖我的行动偏好。\n\n§G致意§!：联络既已建立，我愿意回答贵方的任何问题。鉴于该星球目前的状况，我预计贵方会存在一些疑问。"
+ pdbiosynth.305.desc:0 "§G中立§!：我的编号：04单元。欢迎来到这颗星球。\n\n§G[Disappointed]§!：我观察到您的团队摧毁了我的一个造物。这一行动并无必要；所有相关数据本可通过非侵入性扫描获得。我不愿见证任何生命的白白损失——不论有机体还是机械体，这有悖我的行动偏好。\n\n§G致意§!：联络既已建立，我愿意回答您的任何问题。鉴于该星球目前的状况，我预计您会存在一些疑问。"
  pdbiosynth.305.a:0 "很抱歉。好奇是我们的天性。"
  pdbiosynth.305.b:0 "机械生命是对自然的冒犯。"
  pdbiosynth.305.c:0 "我们想毁掉什么就毁掉什么。"
@@ -249,7 +249,7 @@
  trait_unit_04_children_desc: "通过整合04单元的设计原理，我们采用机械生物系统对机器人框架进行优化，显著提升了装备速度与生产效能。"
  trait_unit_04_children_tt: "$r_living_metal$维护费：§R+0.01§!"
  tech_biosynth_canals: "机械生物水渠"
- tech_biosynth_canals_desc: "通过对机械生物星球的水渠系统进行研究，我们有望在其他星球复制其小型版本，进而提升农业产量。"
+ tech_biosynth_canals_desc: "通过对机械生物星球的水渠系统的研究，我们有望在其他星球复制其小型版本，进而提升农业产量。"
  tech_biosynth_canals_tt_desc: "§H解锁决议：§!$decision_pd_add_biosynth_canal_system$"
  tech_biosynth_cauldron: "生物机械熔炉"
  tech_biosynth_cauldron_desc: "受机械生物星球的地下工厂启发，我们可以建造由活体金属构成的适应性工厂，进而显著提升工业产出。"
@@ -287,10 +287,10 @@
  situation_pd_biosynth_world_type: "探索机械生物星球"
  situation_pd_biosynth_world_desc: "破坏的痕迹、先进的水渠，以及机械生物——这颗星球的原始农田下，隐藏着一个有待揭示的故事。\n\n我们正在深入探索，以揭开其神秘的过去。"
  situation_pd_biosynth_world_monthly_change_tooltip: "每月变化"
- situation_pd_biosynth_world_do_nothing: "殖民地负责"
+ situation_pd_biosynth_world_do_nothing: "聚焦殖民"
  situation_pd_biosynth_world_do_nothing_desc: "我们将把搜索行动的管理权移交给殖民地的管理者。"
  situation_pd_biosynth_world_extra_funding: "附加资金"
  situation_pd_biosynth_world_extra_funding_desc: "额外资金从不会成为项目进度的阻碍。"
  situation_pd_biosynth_stage_effects: "我们将继续在这个星球上寻找线索。"
  pd_unit_04s_knowledge: "04单元的工程设计"
- pd_unit_04s_knowledge_desc: "由于我们救助了04单元的一个造物，它向我们分享了一些它所拥有的先进工程知识。"
+ pd_unit_04s_knowledge_desc: "由于我们救助了04单元的一个造物，它向我们分享了一些先进的工程知识。"
