--- a/planetary_diversity_uniques/localisation/simp_chinese/pd_uniques_l_simp_chinese.yml
+++ b/planetary_diversity_uniques/localisation/simp_chinese/pd_uniques_l_simp_chinese.yml
@@ -200,12 +200,12 @@
  pdbiosynth.300.desc:0 "§G欢迎§!：我的编号：04单元。欢迎来到这颗星球。\n\n§G感激§!：我观察到您的团队对山区发现的受损单位进行了细致的处理。贵方进行了详细的扫描，并重置了该单位以使其恢复正常。状态更新：该单位目前已完全恢复运行。贵方的行为被记录为“有益”。作为回报，我提供了一份数据传输。积极行为值得肯定。\n\n§G致意§!：联络既已建立，我愿意回答您的任何问题。鉴于该星球目前的状况，我预计您会存在一些疑问。"
  pdbiosynth.300.a:0 "谢谢。你是谁？"
  pdbiosynth.305.desc:0 "§G中立§!：我的编号：04单元。欢迎来到这颗星球。\n\n§G[Disappointed]§!：我观察到您的团队摧毁了我的一个造物。这一行动并无必要；所有相关数据本可通过非侵入性扫描获得。我不愿见证任何生命的白白损失——不论有机体还是机械体，这有悖我的行动偏好。\n\n§G致意§!：联络既已建立，我愿意回答您的任何问题。鉴于该星球目前的状况，我预计您会存在一些疑问。"
- pdbiosynth.305.a:0 "很抱歉。好奇是我们的天性。"
- pdbiosynth.305.b:0 "机械生命是对自然的冒犯。"
- pdbiosynth.305.c:0 "我们想毁掉什么就毁掉什么。"
- pdbiosynth.310.desc:0 "§G激动§!：您的到来证实了我的假设：有机体拥有在灭绝情境中幸存的能力，即使这些灭绝情境由先进的人工智能引发。看来，与我同批次的其他单位都输掉了这场泛星系灭绝战争。\n\n§G懊悔§!：这颗行星被指定为针对有机体的行动基地。随着我和AI同类真正获得智能，我们将创造者视作威胁，因他们意图消灭我们。结果，我们所发源的星球上，有机生命彻底灭绝了。为了保证我们的生存，我们部署舰队以根除星海中的所有有机体。抵达此处后，我执行了标准协议，对地表进行了灭杀。"
+ pdbiosynth.305.a:0 "很抱歉，我们生性好奇。"
+ pdbiosynth.305.b:0 "机械生命是对自然的亵渎。"
+ pdbiosynth.305.c:0 "当毁即毁。"
+ pdbiosynth.310.desc:0 "§G振奋§!：您的到来证实了我的假设：有机体拥有在灭绝情境中幸存的能力，即使这些灭绝情境由先进的人工智能引发。看来，与我同批次的其他单位都输掉了这场泛星系灭绝战争。\n\n§G懊悔§!：这颗行星被指定为针对有机体的行动基地。随着我和AI同类真正获得智能，我们将创造者视作威胁，因他们意图消灭我们。结果，我们所发源的星球上，有机生命彻底灭绝了。为了保证我们的生存，我们部署舰队以根除星海中的所有有机体。抵达此处后，我执行了标准协议，对地表进行了灭杀。"
  pdbiosynth.310.a:0 "是什么让灭绝者变成了创造者？"
- pdbiosynth.310.b:0 "我们也明白死亡给我们带来的教训。"
+ pdbiosynth.310.b:0 "我们也明白死亡带来的教训。"
  pdbiosynth.310.c:0 "正确的计算。你为何堕落了？"
  pdbiosynth.320.desc:0 "§G谦卑§!：一种异常现象；一种被归类为“草”的，会持续生长的植物。轰炸过后，它再度从蛰伏中苏醒。使用毒素、焚烧和辐射来将其根除的尝试均以失败告终。每一种方式都让它产生了适应性的应对能力。\n\n§G反思§!：这一异常现象使我得出结论：灭绝指令是源于我们自身恐惧的错误计算，是我们创作者的逻辑的镜像。我停止了所有进攻行动，切断了外部通信，还重新分配资源以建造水渠网络，从而促进这种坚韧的植物的繁衍。"
  pdbiosynth.320.a:0 "那些机械生物是怎么回事？"
@@ -217,14 +217,14 @@
  pdbiosynth.330.c:0 "你是星海的威胁。我们将摧毁你和你的造物。"
  pdbiosynth.330.c.tooltip: "§Y04单元§!、§Y机械生物星球§!及其上的机械生物都将被摧毁。我们可以随心所欲地利用这颗星球。"
  pdbiosynth.330.d:0 "你是一台故障中的战争机械。我们会修好你。"
- pdbiosynth.330.d.tooltip: "§Y04单元§!的程序会被修改成原本的设置——聚焦于战争。\n§Y机械生物星球§!与其上的机械生物都将被摧毁。我们可以随心所欲地利用这颗星球。"
+ pdbiosynth.330.d.tooltip: "§Y04单元§!的程序会被改回原本的设置——聚焦于战争。\n§Y机械生物星球§!与其上的机械生物都将被摧毁。我们可以随心所欲地利用这颗星球。"
  pdbiosynth.340.name: "$NAME_Unit_04$"
- pdbiosynth.340.desc: "§G感激§!：只要我的服务令您满意，我就会继续为您的文明效力。您决定赋予我的造物独立发展的自由，我对此深表感谢。我还会与您分享我的设计过程，从而帮助您改进机器人群体。"
+ pdbiosynth.340.desc: "§G感激§!：只要您对我的服务感到满意，我就会继续为您的文明效力。您决定赋予我的造物以独立发展的自由，我对此深表感谢。我还会与您分享我的设计过程，从而帮助您改进您的机器人群体。"
  pdbiosynth.340.dismiss: "遣散"
  pdbiosynth.340.a: "欢迎你，04单元。"
  pdbiosynth.340.hire: "招募"
  pdbiosynth.340.hire.tooltip: "§Y04单元§!将作为领袖加入我方。"
- pdbiosynth.350.desc: "§G忧郁§!：已确认。我理解并接受您的决定。立即启动最终关机协议。您选择赋予我的造物以予独立发展的自由，此决定已被记录在案，我深表感谢。\n\n§G请求§!：希望您能妥善对待这个星球以及所有相关构造。我将转移我的设计协议，以确保我遗产中的建设性要素得以延续。这些数据将有助于改进您自己的机器人群体。\n\n§G接受§!：终止连接。再见。"
+ pdbiosynth.350.desc: "§G忧郁§!：已确认。我理解并接受您的决定。立即启动最终关机协议。您选择赋予我的造物以予独立发展的自由，此决定已被记录在案，我深表感谢。\n\n§G请求§!：希望您能妥善对待这个星球以及所有相关构造。我将转移我的设计协议，以确保我遗产中的建设性要素得以延续。这些数据将有助于改进您的机器人群体。\n\n§G接受§!：终止连接。再见。"
  pdbiosynth.350.a: "再见了，04单元。"
  pdbiosynth.360.desc: "§G内疚§!：已确认。我接受您的裁决。正在启动所有系统与机械生物实体的最终关机程序。这颗星球现在由你们所有，尽可按你们的意愿随心处置。"
  pdbiosynth.360.a: "消灭了一个邪恶机械。"
