--- a/planetary_diversity_uniques/localisation/simp_chinese/pd_uniques_l_simp_chinese.yml
+++ b/planetary_diversity_uniques/localisation/simp_chinese/pd_uniques_l_simp_chinese.yml
@@ -217,7 +217,7 @@
  pdbiosynth.330.c:0 "你是星海的威胁。我们将摧毁你和你的造物。"
  pdbiosynth.330.c.tooltip: "§Y04单元§!、§Y机械生物星球§!及其上的机械生物都将被摧毁。我们可以随心所欲地利用这颗星球。"
  pdbiosynth.330.d:0 "你是一台故障中的战争机械。我们会修好你。"
- pdbiosynth.330.d.tooltip: "§Y04单元§!的程序会被改回原本的设置——聚焦于战争。\n§Y机械生物星球§!与其上的机械生物都将被摧毁。我们可以随心所欲地利用这颗星球。"
+ pdbiosynth.330.d.tooltip: "§Y04单元§!会被改回原本的程序设置——聚焦于战争。\n§Y机械生物星球§!与其上的机械生物都将被摧毁。我们可以随心所欲地利用这颗星球。"
  pdbiosynth.340.name: "$NAME_Unit_04$"
  pdbiosynth.340.desc: "§G感激§!：只要您对我的服务感到满意，我就会继续为您的文明效力。您决定赋予我的造物以独立发展的自由，我对此深表感谢。我还会与您分享我的设计过程，从而帮助您改进您的机器人群体。"
  pdbiosynth.340.dismiss: "遣散"
@@ -246,7 +246,7 @@
  leader_trait_unit_04_evil: "04单元"
  leader_trait_unit_04_evil_desc: "作为昔日的战体，现在它已恢复初始设定，在军事建设和战术方面表现出色。"
  trait_unit_04_children: "04单元机械生物框架"
- trait_unit_04_children_desc: "通过整合04单元的设计原理，我们采用机械生物系统对机器人框架进行优化，显著提升了装备速度与生产效能。"
+ trait_unit_04_children_desc: "通过整合04单元的设计原理，我们采用机械生物系统对机器人框架进行优化，显著提升了组装速度与生产效能。"
  trait_unit_04_children_tt: "$r_living_metal$维护费：§R+0.01§!"
  tech_biosynth_canals: "机械生物水渠"
  tech_biosynth_canals_desc: "通过对机械生物星球的水渠系统的研究，我们有望在其他星球复制其小型版本，进而提升农业产量。"
@@ -293,4 +293,4 @@
  situation_pd_biosynth_world_extra_funding_desc: "额外资金从不会成为项目进度的阻碍。"
  situation_pd_biosynth_stage_effects: "我们将继续在这个星球上寻找线索。"
  pd_unit_04s_knowledge: "04单元的工程设计"
- pd_unit_04s_knowledge_desc: "由于我们救助了04单元的一个造物，它向我们分享了一些先进的工程知识。"
+ pd_unit_04s_knowledge_desc: "为了感谢我们救助了一个造物，04单元向我们分享了一些先进的工程知识。"
