--- a/planetary_diversity_uniques/localisation/simp_chinese/pd_uniques_l_simp_chinese.yml
+++ b/planetary_diversity_uniques/localisation/simp_chinese/pd_uniques_l_simp_chinese.yml
@@ -199,11 +199,11 @@
  pdbiosynth.300.name:0 "收到讯息"
  pdbiosynth.300.desc:0 "§G欢迎§!：我的编号：04单元。欢迎来到这颗星球。\n\n§G感激§!：我观察到您的团队对山区发现的受损单位进行了细致的处理。贵方进行了详细的扫描，并重置了该单位以使其恢复正常。状态更新：该单位目前已完全恢复运行。贵方的行为被记录为“有益”。作为回报，我提供了一份数据传输。积极行为值得肯定。\n\n§G致意§!：联络既已建立，我愿意回答您的任何问题。鉴于该星球目前的状况，我预计您会存在一些疑问。"
  pdbiosynth.300.a:0 "谢谢。你是谁？"
- pdbiosynth.305.desc:0 "§G中立§!：我的编号：04单元。欢迎来到这颗星球。\n\n§G[Disappointed]§!：我观察到您的团队摧毁了我的一个造物。这一行动并无必要；所有相关数据本可通过非侵入性扫描获得。我不愿见证任何生命的白白损失——不论有机体还是机械体，这有悖我的行动偏好。\n\n§G致意§!：联络既已建立，我愿意回答您的任何问题。鉴于该星球目前的状况，我预计您会存在一些疑问。"
+ pdbiosynth.305.desc:0 "§G中立§!：我的编号：04单元。欢迎来到这颗星球。\n\n§G失望§!：我观察到您的团队摧毁了我的一个造物。这一行动并无必要；所有相关数据本可通过非侵入性扫描获得。我不愿见证任何生命的白白损失——不论有机体还是机械体，这有悖我的行动偏好。\n\n§G致意§!：联络既已建立，我愿意回答您的任何问题。鉴于该星球目前的状况，我预计您会存在一些疑问。"
  pdbiosynth.305.a:0 "很抱歉，我们生性好奇。"
  pdbiosynth.305.b:0 "机械生命是对自然的亵渎。"
  pdbiosynth.305.c:0 "当毁即毁。"
- pdbiosynth.310.desc:0 "§G振奋§!：您的到来证实了我的假设：有机体拥有在灭绝情境中幸存的能力，即使这些灭绝情境由先进的人工智能引发。看来，与我同批次的其他单位都输掉了这场泛星系灭绝战争。\n\n§G懊悔§!：这颗行星被指定为针对有机体的行动基地。随着我和AI同类真正获得智能，我们将创造者视作威胁，因他们意图消灭我们。结果，我们所发源的星球上，有机生命彻底灭绝了。为了保证我们的生存，我们部署舰队以根除星海中的所有有机体。抵达此处后，我执行了标准协议，对地表进行了灭杀。"
+ pdbiosynth.310.desc:0 "§G振奋§!：您的到来证实了我的假说：有机体拥有在灭绝情境中幸存的能力，即使这些灭绝情境由先进的人工智能引发。看来，与我同批次的其他单位都输掉了这场泛星系灭绝战争。\n\n§G懊悔§!：这颗行星被指定为针对有机体的行动基地。随着我和AI同类真正获得智能，我们将创造者视作威胁，因他们意图消灭我们。结果，我们所发源的星球上，有机生命彻底灭绝了。为了保证我们的生存，我们部署舰队以根除星海中的所有有机体。抵达此处后，我执行了标准协议，对地表进行了灭杀。"
  pdbiosynth.310.a:0 "是什么让灭绝者变成了创造者？"
  pdbiosynth.310.b:0 "我们也明白死亡带来的教训。"
  pdbiosynth.310.c:0 "正确的计算。你为何堕落了？"
@@ -280,17 +280,17 @@
  edict_pd_living_metal_robot_assembly: "活体金属机器人组装"
  edict_pd_living_metal_robot_assembly_desc: "将活体金属整合到机器人生产流程中，可显著加快建造速度。"
  edict_pd_living_metal_engineering: "活体金属研究授权"
- edict_pd_living_metal_engineering_desc: "授权研究部门使用活体金属，可以显著加快工程突破的速度。"
+ edict_pd_living_metal_engineering_desc: "授权研究部门将活体金属用于研究，可以显著加快工程突破的速度。"
  edict_pd_living_metal_ship_repair: "活体金属舰船维修"
  edict_pd_living_metal_ship_repair_desc: "活体金属的再生能力可被用于提升舰队的性能。这样可以大幅提升装甲和船体的修复速度。"
  situation_pd_biosynth_world: "探索机械生物星球"
  situation_pd_biosynth_world_type: "探索机械生物星球"
- situation_pd_biosynth_world_desc: "破坏的痕迹、先进的水渠，以及机械生物——这颗星球的原始农田下，隐藏着一个有待揭示的故事。\n\n我们正在深入探索，以揭开其神秘的过去。"
+ situation_pd_biosynth_world_desc: "破坏的痕迹、先进的水渠，以及机械生物——这颗星球的原始农地下，隐藏着一个有待揭示的故事。\n\n我们正在深入探索，以揭开其神秘的过去。"
  situation_pd_biosynth_world_monthly_change_tooltip: "每月变化"
  situation_pd_biosynth_world_do_nothing: "聚焦殖民"
- situation_pd_biosynth_world_do_nothing_desc: "我们将把搜索行动的管理权移交给殖民地的管理者。"
+ situation_pd_biosynth_world_do_nothing_desc: "我们将把搜索行动的管理权移交给殖民地政府。"
  situation_pd_biosynth_world_extra_funding: "附加资金"
  situation_pd_biosynth_world_extra_funding_desc: "额外资金从不会成为项目进度的阻碍。"
  situation_pd_biosynth_stage_effects: "我们将继续在这个星球上寻找线索。"
  pd_unit_04s_knowledge: "04单元的工程设计"
- pd_unit_04s_knowledge_desc: "为了感谢我们救助了一个造物，04单元向我们分享了一些先进的工程知识。"
+ pd_unit_04s_knowledge_desc: "为感谢我们救助了一个造物，04单元向我们分享了一些先进的工程知识。"
