--- a/planetary_diversity/localisation/english/planetarydiversity_l_english.yml
+++ b/planetary_diversity/localisation/english/planetarydiversity_l_english.yml
@@ -206,3 +206,7 @@
  pd_normal_terraforming_name: "Normal Terraforming Standard"
  pd_normal_terraforming: "Normal Terraforming Standard"
  pd_normal_terraforming_desc: "Terraforming costs will remain standard, we will use World Shaper on the planets we choose."
+
+ #Nemma World
+ pd_nemma: "Nemma World"
+ pd_nemma_desc: "This planet's islands are actually colossal, mineral-shelled amphibian reptiles. Called Nemmas, they float on the surface and remain docile if undisturbed."
