--- a/planetary_diversity/localisation/simp_chinese/planetarydiversity_l_simp_chinese.yml
+++ b/planetary_diversity/localisation/simp_chinese/planetarydiversity_l_simp_chinese.yml
@@ -188,3 +188,10 @@
  pd_normal_terraforming_name: "常规环境改造标准"
  pd_normal_terraforming: "常规环境改造标准"
  pd_normal_terraforming_desc: "环境改造花费将保持常规水平。我们会挑选星球来应用星球塑形师技术。"
+
+ #Nemma World
+ pd_nemma: "Nemma World"
+ pd_nemma_desc: "This planet's islands are actually colossal, mineral-shelled amphibian reptiles. Called Nemmas, they float on the surface and remain docile if undisturbed."
+ #Alpha Centauri
+ pd_alpha_centauri: "Chiron World"
+ pd_alpha_centauri_desc: "The planet is covered in xeno-fungal growths and plagued by extreme weather and seismic instability. Despite these hazards, its rich resources and resilient biosphere offer valuable opportunities for research and exploitation."
