--- a/planetary_diversity/localisation/english/planetarydiversity_l_english.yml
+++ b/planetary_diversity/localisation/english/planetarydiversity_l_english.yml
@@ -210,3 +210,6 @@
  #Nemma World
  pd_nemma: "Nemma World"
  pd_nemma_desc: "This planet's islands are actually colossal, mineral-shelled amphibian reptiles. Called Nemmas, they float on the surface and remain docile if undisturbed."
+ #Alpha Centauri
+ pd_alpha_centauri: "Chiron World"
+ pd_alpha_centauri_desc: "The planet is covered in xeno-fungal growths and plagued by extreme weather and seismic instability. Despite these hazards, its rich resources and resilient biosphere offer valuable opportunities for research and exploitation."
