--- a/planetary_diversity/localisation/russian/planetarydiversity_l_russian.yml
+++ b/planetary_diversity/localisation/russian/planetarydiversity_l_russian.yml
@@ -206,3 +206,10 @@
  pd_normal_terraforming_name: "Normal Terraforming Standard"
  pd_normal_terraforming: "Normal Terraforming Standard"
  pd_normal_terraforming_desc: "Terraforming costs will remain standard, we will use World Shaper on the planets we choose."
+
+ #Nemma World
+ pd_nemma: "Nemma World"
+ pd_nemma_desc: "This planet's islands are actually colossal, mineral-shelled amphibian reptiles. Called Nemmas, they float on the surface and remain docile if undisturbed."
+ #Alpha Centauri
+ pd_alpha_centauri: "Chiron World"
+ pd_alpha_centauri_desc: "The planet is covered in xeno-fungal growths and plagued by extreme weather and seismic instability. Despite these hazards, its rich resources and resilient biosphere offer valuable opportunities for research and exploitation."
