--- a/planetary_diversity/localisation/simp_chinese/planetarydiversity_domed_colonies_l_simp_chinese.yml
+++ b/planetary_diversity/localisation/simp_chinese/planetarydiversity_domed_colonies_l_simp_chinese.yml
@@ -179,7 +179,7 @@
  pd_domed_energy_site_2_desc: "$pd_domed_energy_site_1_desc$"
  pd_domed_energy_site_3: "$pd_domed_energy_site_1$"
  pd_domed_energy_site_3_desc: "$pd_domed_energy_site_1_desc$"
- decision_build_pd_moon_base: "铸造外围基地（卫星）"
+ decision_build_pd_moon_base: "建立外围基地（卫星）"
  decision_build_pd_moon_base_desc: "我们会在该星球的卫星上建立外围卫星基地。"
  decision_build_pd_moon_base_moon_colony: "$decision_build_pd_moon_base$"
  decision_build_pd_moon_base_moon_colony_desc: "我们会在该星球所环绕运行之行星的其他卫星上建立外围卫星基地。"
@@ -201,8 +201,8 @@
  decision_build_pd_energy_base_2_desc: "$decision_build_pd_energy_base_desc$"
  decision_build_pd_energy_base_3: "$decision_build_pd_energy_base$"
  decision_build_pd_energy_base_3_desc: "$decision_build_pd_energy_base_desc$"
- decision_build_pd_research_base: "在星系中建立研究基地"
- decision_build_pd_research_base_desc: "我们会在该星系的一个非宜居星球上建立外围研究基地。"
+ decision_build_pd_research_base: "在星系中建立科研基地"
+ decision_build_pd_research_base_desc: "我们会在该星系的一个非宜居星球上建立外围科研基地。"
  decision_build_pd_research_base_2: "$decision_build_pd_research_base$"
  decision_build_pd_research_base_2_desc: "$decision_build_pd_research_base_desc$"
  decision_build_pd_research_base_3: "$decision_build_pd_research_base$"
@@ -211,4 +211,4 @@
  MAKE_MINIG_BASES: "§Y外围基地（采矿）§!已建成。"
  MAKE_FOOD_BASES: "§Y外围基地（水培）§!已建成。"
  MAKE_ENERGY_BASES: "§Y外围基地（发电）§!已建成。"
- MAKE_RESEARCH_BASES: "§Y外围基地（研究）§!已建成。"
+ MAKE_RESEARCH_BASES: "§Y外围基地（科研）§!已建成。"
