--- a/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_modifiers_l_simp_chinese.yml
+++ b/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_modifiers_l_simp_chinese.yml
@@ -204,13 +204,13 @@
  pd_nuked_cave: "岩洞星球（死寂）"
  pd_nuked_cave_desc: "一颗大气中充斥着氮氧元素的岩洞星球。目前它正处于核冬天，大气中含有乌黑浓厚的悬浮颗粒。表面辐射水平高。鲜有生命迹象。"
  pd_gaia_world: "盖亚星球"
- pd_gaia_world_desc: "这类星球是环境理想的人造星球，拥有氮氧大气层和能够自我修复的生态系统。各纬度环境对高等生命都是极佳的生活空间。"
+ pd_gaia_world_desc: "这类星球是环境理想的人造星球，拥有氮氧大气层和能够自我修复的生态系统。各纬度环境对所有既存高等生命都是极佳的生活空间。"
  pd_dry_gaia_world: "盖亚星球（干燥）"
  pd_dry_gaia_world_desc: "这类星球是环境理想的人造星球，拥有氮氧大气层和能够自我修复的生态系统。各纬度环境对所有既存高等生命都是极佳的生活空间。"
  pd_cold_gaia_world: "盖亚星球（寒冷）"
  pd_cold_gaia_world_desc: "这类星球是环境理想的人造星球，拥有氮氧大气层和能够自我修复的生态系统。各纬度环境对所有既存高等生命都是极佳的生活空间。"
  pd_uncommon_gaia_world: "盖亚星球"
- pd_uncommongaia_world_desc: "这类星球是环境理想的人造星球，拥有氮氧大气层和能够自我修复的生态系统。各纬度环境对所有既存高等生命都是极佳的生活空间。"
+ pd_uncommon_gaia_world_desc: "这类星球是环境理想的人造星球，拥有氮氧大气层和能够自我修复的生态系统。各纬度环境对所有既存高等生命都是极佳的生活空间。"
  pc_pd_nuked_arcology: "遗落星球（死寂）"
  pc_pd_nuked_arcology_desc: "这曾是一座星球规模的巨城。目前它正处于核冬天，大气中含有乌黑浓厚的悬浮颗粒。表面辐射水平高。鲜有生命迹象。"
  pc_pd_nuked_arcology_tooltip: "宜居性：§R-100%§!\n如有§Y$trait_pc_nuked_preference$§!或§Y$trait_survivor$§!特质，宜居性：§G+100%§!"
