--- a/planetary_diversity_ascension_worlds/localisation/simp_chinese/planetarydiversity_aw_necro_l_simp_chinese.yml
+++ b/planetary_diversity_ascension_worlds/localisation/simp_chinese/planetarydiversity_aw_necro_l_simp_chinese.yml
@@ -37,23 +37,23 @@
  trait_pc_pd_necro_shroud_relic_preference_desc: "$DO_NOT_USE$"
  decision_pd_aw_necro_planet: "建立行星墓城"
  decision_pd_aw_necro_planet_desc: "这个星球渴望变成一座延绵不断的神殿，回荡我们意义永恒的遗产的低语。"
- decision_pd_aw_necro_planet_effects_short: "已添加§Y$district_pd_aw_necro$§!修正\n§Y$district_farming_plural$§!的建造会被§G$district_pd_aw_necro_plural$§!取代"
+ decision_pd_aw_necro_planet_effects_short: "已添加§Y$district_pd_aw_necro$§!修正"
  decision_pd_aw_necro_planet_cleanup: "移除行星墓城"
  decision_pd_aw_necro_planet_cleanup_desc: "我们必须移除该星球前主人遗留的神庙和坟墓。"
  decision_pd_aw_necro_planet_cleanup_effects_short: "§Y$pd_aw_necro_planet$§!修正将被移除。"
  pd_aw_necro_planet: "墓城"
- pd_aw_necro_planet_tooltip: "§G解锁建造§!：£district£ $district_pd_aw_necro_plural$\n§R禁用建造§!：£district£ $district_farming_plural$\n[GetAdministratorPluralWithIcon]产生的£unity£ $unity$：§G+0.5§!\n$MOD_PLANET_ORBITAL_BOMBARDMENT_DAMAGE$§G-25%§!\n$MOD_POP_GROWTH_SPEED_REDUCTION$§R10%§!"
+ pd_aw_necro_planet_tooltip: "[GetAdministratorPluralWithIcon]产生的£unity£ $unity$：§G+0.5§!\n$MOD_PLANET_ORBITAL_BOMBARDMENT_DAMAGE$§G-25%§!\n$MOD_POP_GROWTH_SPEED_REDUCTION$§R10%§!"
  pd_aw_necro_planet_desc: "这个星球是一座延绵不断的神殿，地表回荡着意义永恒的低语。"
  pd_aw_necro_city_planet: "$pd_aw_necro_planet$"
  pd_aw_necro_city_planet_desc: "$pd_aw_necro_planet_desc$"
  pd_aw_necro_city_planet_tooltip: "[GetAdministratorPluralWithIcon]产生的£unity£ $unity$：§G+0.5§!\n$MOD_PLANET_ORBITAL_BOMBARDMENT_DAMAGE$§G-25%§!\n$MOD_POP_GROWTH_SPEED_REDUCTION$§R10%§!"
  pd_necro_planet: "墓城"
- pd_necro_planet_tooltip: "§G解锁建造§!：£district£ $district_pd_aw_necro_plural$\n§R禁用建造§!：£district£ $district_farming_plural$\n[GetAdministratorPluralWithIcon]产生的£unity£ $unity$：§G+0.5§!\n$MOD_PLANET_ORBITAL_BOMBARDMENT_DAMAGE$§G-25%§!\n$MOD_POP_GROWTH_SPEED_REDUCTION$§R10%§!"
+ pd_necro_planet_tooltip: "[GetAdministratorPluralWithIcon]产生的£unity£ $unity$：§G+0.5§!\n$MOD_PLANET_ORBITAL_BOMBARDMENT_DAMAGE$§G-25%§!\n$MOD_POP_GROWTH_SPEED_REDUCTION$§R10%§!"
  pd_necro_planet_desc: "这个星球是一座延绵不断的神殿，地表回荡着意义永恒的低语。"
  ap_pd_necro_worlds: "墓城世界"
- ap_pd_necro_worlds_desc: "我们的星球渴望变成一座延绵不断的神殿，回荡我们意义永恒的遗产的低语。"
+ ap_pd_necro_worlds_desc: "我们的星球渴望化作延绵不断的神殿，回荡着永恒传承的低语。"
  allow_necro_worlds: "§H解锁决议：§!$decision_pd_aw_necro_planet$"
- describe_necro_worlds: "非都市星球\n$t$—解锁建造：£district£ ['district:district_pd_aw_necro']\n$t$—禁用建造：£district£ ['district:district_farming']\n环世界\n$t$—解锁建造：£district£ ['district:district_rw_pd_aw_necro']\n$t$—禁用建造：£district£ ['district:district_rw_farming']\n\n解锁§Y行星死光§!巨像武器§R（需要§Y$ap_colossus$§!飞升天赋）§!。"
+ describe_necro_worlds: "解锁§Y行星死光§!巨像武器§R（需要§Y$ap_colossus$§!飞升天赋）§!。"
  district_pd_aw_necro: "墓城区划"
  district_pd_aw_necro_plural: "墓城区划"
  district_pd_aw_necro_desc: "这些尖塔是我们遗存的实证，关乎我们的永恒意义。"
