--- a/planetary_diversity_ascension_worlds/localisation/simp_chinese/planetarydiversity_aw_wasteland_l_simp_chinese.yml
+++ b/planetary_diversity_ascension_worlds/localisation/simp_chinese/planetarydiversity_aw_wasteland_l_simp_chinese.yml
@@ -2,7 +2,7 @@
  ap_pd_wasteland_worlds: "无管制工业"
  ap_pd_wasteland_worlds_desc: "为追求不受限制的生产力，我们必须抛开环境限制，充分发掘星球的工业潜力。"
  allow_wasteland_worlds: "§Y解锁决议：§!在非理想星球使用$decision_pd_aw_wasteland_planet$"
- describe_wasteland_worlds: "§Y$decision_pd_aw_wasteland_planet$§!修正：\n$t$—解锁£district£ §Y发电区划§!和§Y采矿区划§!\n$t$—禁用所有§Y农业区划§!\n$t$—$MOD_HABITABILITY_CEIL$：§Y60%§!\n$t$—$mod_planet_jobs_alloys_produces_mult$：§G100%§!\n$t$—$mod_planet_jobs_consumer_goods_produces_mult$：§G100%§!\n$t$—$mod_planet_chemists_produces_mult$：§G50%§!\n$t$—$mod_planet_refiners_produces_mult$：§G50%§!\n$t$—$mod_planet_translucers_produces_mult$：§G50%§!"
+ describe_wasteland_worlds: "§Y$decision_pd_aw_wasteland_planet$§!修正：\n$t$—$MOD_HABITABILITY_CEIL$：§Y60%§!\n$t$—$mod_planet_jobs_alloys_produces_mult$：§G100%§!\n$t$—$mod_planet_jobs_consumer_goods_produces_mult$：§G100%§!"
  decision_pd_aw_wasteland_planet: "无管制工业标准"
  decision_pd_aw_wasteland_planet_desc: "环境问题只会阻碍我们前进。忽略该星球的自然生态系统，我们会解放它真正的工业潜力。"
  decision_pd_aw_wasteland_planet_effects_short: "已添加§Y$pd_aw_wasteland_planet$§!修正。\n\n会增加§G工业产出§!，但是会降低£mod_pop_environment_tolerance£ §R宜居性§!。"
