--- a/planetary_diversity/localisation/simp_chinese/planetarydiversity_ascension_worlds_l_simp_chinese.yml
+++ b/planetary_diversity/localisation/simp_chinese/planetarydiversity_ascension_worlds_l_simp_chinese.yml
@@ -30,7 +30,7 @@
  decision_pd_wasteland_planet_cleanup_tooltip: "我们会修复该星球原本的生态系统。"
  pd_wasteland_planet: "工业废土"
  pd_wasteland_planet_desc: "环境问题只会阻碍我们前进。忽略该星球的自然生态系统，我们会解放它真正的工业潜力。"
- pd_wasteland_planet_tooltip: "解锁£district£ §Y发电区划§!和§Y采矿区划§!\n禁用所有§Y农业区划§!"
+ pd_wasteland_planet_tooltip: "解锁£district£ §Y发电区划§!和§Y采矿区划§!"
  pd_aw_wasteland_planet: "工业废土"
  pd_aw_wasteland_planet_desc: "$decision_pd_wasteland_planet_desc$"
  pd_aw_wasteland_planet_tooltip: "解锁£district£ §Y发电区划§!和§Y采矿区划§!"
@@ -68,7 +68,7 @@
  mod_pc_pd_nuked_superhabitable_habitability: "$pc_pd_nuked_superhabitable$宜居性"
  mod_pc_pd_nuked_tidally_locked_habitability: "$pc_pd_nuked_tidally_locked$宜居性"
  pd_necro_planet: "墓城"
- pd_necro_planet_tooltip: "§G解锁建造§!：£district£ $district_pd_aw_necro_plural$\n§R禁用建造§!：£district£ $district_farming_plural$\n[GetAdministratorPluralWithIcon]产生的£unity£ $unity$：§G+0.5§!\n$MOD_PLANET_ORBITAL_BOMBARDMENT_DAMAGE$§G-25%§!\n$MOD_POP_GROWTH_SPEED_REDUCTION$§R10%§!"
+ pd_necro_planet_tooltip: "[GetAdministratorPluralWithIcon]产生的£unity£ $unity$：§G+0.5§!\n$MOD_PLANET_ORBITAL_BOMBARDMENT_DAMAGE$§G-25%§!\n$MOD_POP_GROWTH_SPEED_REDUCTION$§R10%§!"
  pd_necro_planet_desc: "这个星球是一座延绵不断的神殿，地表回荡着意义永恒的低语。"
  pd_aw_necro_city_planet: "$pd_aw_necro_planet$"
  pd_aw_necro_city_planet_desc: "$pd_aw_necro_planet_desc$"
