--- a/planetary_diversity/localisation/simp_chinese/planetarydiversity_domed_colonies_l_simp_chinese.yml
+++ b/planetary_diversity/localisation/simp_chinese/planetarydiversity_domed_colonies_l_simp_chinese.yml
@@ -130,9 +130,9 @@
  origin_pd_interplanetary_settlers: "行星际殖民"
  origin_pd_interplanetary_settlers_desc: "在触及其它恒星以前，这个帝国就为自己打好了基础，建立了遍布于母星系卫星和行星的穹顶居住站。现在，有了FTL技术，他们站在新时代的开端，准备触摸未知的宙域。"
  origin_tooltip_pd_interplanetary_settlers_start_effects: "—$INITIAL_POPS$§G+2§!$NEW_LINE$—$HOMEWORLD$$TABBED_NEW_LINE$—['concept_pd_network_hub', $d_pd_solar_system_network_hub$]$NEW_LINE$—母星的卫星：$TABBED_NEW_LINE$—['concept_pd_moonbase', $pd_domed_base_0$]$NEW_LINE$—殖民地：$TABBED_NEW_LINE$—['concept_pd_domed_colony', $pd_domed_colony_0$]$NEW_LINE$—$ADDITONAL_TECHNOLOGIES_STRING$['concept_tech_pd_domed_colonies', £engineering£ $tech_pd_domed_colonies$]"
- pd_interplanetary_system_initializer_NAME: "随机穹顶星系"
+ pd_interplanetary_system_initializer_NAME: "行星际殖民"
  pd_interplanetary_system_initializer_DESC: "随机初始星系，附带一处穹顶殖民地和一处外围基地。"
- pd_interplanetary_sol_system_initializer_NAME: "太阳系（穹顶）"
+ pd_interplanetary_sol_system_initializer_NAME: "行星际殖民（太阳系）"
  pd_interplanetary_sol_system_initializer_DESC: "以太阳系作为初始星系，附带一处穹顶殖民地和一处外围基地。"
  concept_pd_network_hub: "$d_pd_solar_system_network_hub$"
  concept_pd_network_hub_desc: "会根据首府级别和星系内已建造的['concept_pd_moonbases', 外围基地]来添加更多岗位。\n\n§L$d_pd_solar_system_network_hub_desc$§!"
