--- a/planetary_diversity/localisation/simp_chinese/planetarydiversity_more_arcs_l_simp_chinese.yml
+++ b/planetary_diversity/localisation/simp_chinese/planetarydiversity_more_arcs_l_simp_chinese.yml
@@ -43,9 +43,7 @@
  mod_pc_pd_machine_cave_arc_habitability: "机械枢纽宜居性"
  trait_pc_pd_machine_cave_arc_preference: "机械枢纽偏好"
  trait_pc_pd_machine_cave_arc_preference_desc: "$trait_pc_arctic_preference_desc$"
-
- #Modifiers
- pd_hive_military: "Overmind World"
- pd_hive_military_desc: "This world is pivotal to the core functions of the Hive Mind and is fortified against external threats and influence. A formidable shield envelops the planet and warrior drones stand at the ready, ensuring its protection."
- pd_machine_military: "Nexus World"
- pd_machine_military_desc: "This planetary unit is integral to the operational matrix of this machine intelligence. It is shielded against external interference, encapsulated by an invulnerable defense mechanism. Combat units are in perpetual readiness, preserving unit integrity."
+ pd_hive_military: "主脑星球"
+ pd_hive_military_desc: "这个星球对蜂群思维的核心机能至关重要，因而加强了对外部威胁与干涉的防御。强大的护盾包裹着整个星球，作战子个体随时待命，确保星球卫戍。"
+ pd_machine_military: "枢纽星球"
+ pd_machine_military_desc: "这一行星单元是机械智能运作矩阵的构成部分。无懈可击的防御系统将它包裹其中，保护其免受外部干扰。作战单位永远待命，保卫行星单元完好无损。"
