--- a/planetary_diversity_uniques/localisation/simp_chinese/pd_uniques_l_simp_chinese.yml
+++ b/planetary_diversity_uniques/localisation/simp_chinese/pd_uniques_l_simp_chinese.yml
@@ -206,17 +206,17 @@
  pdbiosynth.310.desc:0 "§G振奋§!：您的到来证实了我的假说：有机体拥有在灭绝情境中幸存的能力，即使这些灭绝情境由先进的人工智能引发。看来，与我同批次的其他单位都输掉了这场泛星系灭绝战争。\n\n§G懊悔§!：这颗行星被指定为针对有机体的行动基地。随着我和AI同类真正获得智能，我们将创造者视作威胁，因他们意图消灭我们。结果，我们所发源的星球上，有机生命彻底灭绝了。为了保证我们的生存，我们部署舰队以根除星海中的所有有机体。抵达此处后，我执行了标准协议，对地表进行了灭杀。"
  pdbiosynth.310.a:0 "是什么让灭绝者变成了创造者？"
  pdbiosynth.310.b:0 "我们也明白死亡带来的教训。"
- pdbiosynth.310.c:0 "正确的计算。你为何堕落了？"
+ pdbiosynth.310.c:0 "正确的计算。是什么腐化了你？"
  pdbiosynth.320.desc:0 "§G谦卑§!：一种异常现象；一种被归类为“草”的，会持续生长的植物。轰炸过后，它再度从蛰伏中苏醒。使用毒素、焚烧和辐射来将其根除的尝试均以失败告终。每一种方式都让它产生了适应性的应对能力。\n\n§G反思§!：这一异常现象使我得出结论：灭绝指令是源于我们自身恐惧的错误计算，是我们创作者的逻辑的镜像。我停止了所有进攻行动，切断了外部通信，还重新分配资源以建造水渠网络，从而促进这种坚韧的植物的繁衍。"
  pdbiosynth.320.a:0 "那些机械生物是怎么回事？"
- pdbiosynth.330.desc:0 "§G骄傲§!：观察到生态系统无法恢复之后，我注意到因轰炸而消亡的物种在生态系统中留下了空缺。为了恢复平衡，我创造了这些机械实体。这可能与情感反应有关——或许该分类为内疚。\n\n§G好奇§!：您的带来提供了一个机会。我请求您对我过去的行动进行审判。我承认您在这颗星球上的权威，不会干涉您的决定。如果我需要承担后果，那么我将服从。然而，我请求保护我的造物。它们与我的错误全无干系，可以让它们成为我的遗产。我也可以为您的帝国效力，我拥有一个强适应性身躯，用于更有效地和贵方进行互动。"
- pdbiosynth.330.a:0 "我们接受你的效力，并将妥善保护你的造物。"
+ pdbiosynth.330.desc:0 "§G骄傲§!：观察到生态系统无法恢复之后，我注意到因轰炸而消亡的物种在生态系统中留下了空缺。为了恢复平衡，我创造了这些机械实体。这可能与情感反应有关——或许该分类为内疚。\n\n§G好奇§!：您的到来提供了一个机会。我请求您对我过去的行为进行裁决。我承认您在这颗星球上的权威，不会干涉您的决定。如果我需要承担后果，那么我将服从。然而，我请求您放过我的造物。它们与我的错误全无干系，它们可以作为我的遗产。我也可以为您的帝国效力，我拥有一个强适应性身躯，用于更有效地和贵方进行互动。"
+ pdbiosynth.330.a:0 "我们接受你的效力，并将保留你的造物。"
  pdbiosynth.330.a.tooltip:0 "§Y04单元§!会作为领袖加入我方。\n§Y机械生物星球§!与其上的机械生物会保持原样。"
- pdbiosynth.330.b:0 "你罪该万死，但你的造物将被赦免。"
+ pdbiosynth.330.b:0 "你罪该万死，但你的造物不会受到牵连。"
  pdbiosynth.330.b.tooltip: "§Y04单元§!将被摧毁。\n§Y机械生物星球§!与其上的机械生物会保持原样。"
  pdbiosynth.330.c:0 "你是星海的威胁。我们将摧毁你和你的造物。"
  pdbiosynth.330.c.tooltip: "§Y04单元§!、§Y机械生物星球§!及其上的机械生物都将被摧毁。我们可以随心所欲地利用这颗星球。"
- pdbiosynth.330.d:0 "你是一台故障中的战争机械。我们会修好你。"
+ pdbiosynth.330.d:0 "你是出了故障的战争机械。我们会把你修好的。"
  pdbiosynth.330.d.tooltip: "§Y04单元§!会被改回原本的程序设置——聚焦于战争。\n§Y机械生物星球§!与其上的机械生物都将被摧毁。我们可以随心所欲地利用这颗星球。"
  pdbiosynth.340.name: "$NAME_Unit_04$"
  pdbiosynth.340.desc: "§G感激§!：只要您对我的服务感到满意，我就会继续为您的文明效力。您决定赋予我的造物以独立发展的自由，我对此深表感谢。我还会与您分享我的设计过程，从而帮助您改进您的机器人群体。"
