--- a/planetary_diversity/localisation/simp_chinese/planetarydiversity_l_simp_chinese.yml
+++ b/planetary_diversity/localisation/simp_chinese/planetarydiversity_l_simp_chinese.yml
@@ -168,7 +168,7 @@
  building_gaia_resort_desc: "经过调控的气候模式，加上令人震撼的壮丽景色，实在是休闲和理疗的不二之选。"
  decision_nuked_own_planet: "核爆环境"
  decision_nuked_own_planet_desc: "我们需要赖以生存的强辐射环境。我们习惯用核弹头来改变环境，满足需求。"
- mod_planet_bio_trophies_unity_produces_add: "每一$pop_group_unit$[GetPopAssemblersPluralWithIcon]的£unity£$unity$"
+ mod_planet_bio_trophies_unity_produces_add: "每$pop_group_unit$[GetPopAssemblersPluralWithIcon]的£unity£$unity$"
  decision_pd_flood_planet: "拓展行星海洋"
  decision_pd_flood_planet_desc: "这个海洋星球可以成为我们人民的理想家园。调节海平面，并将城市迁移到水下，我们可以保证那些水下生命的和乐生活。"
  decision_pd_flood_planet_tooltip: "冰可以通过建有§Y$sm_ice_mining_station$§!的恒星基地从恒星系里采集。\n已添加§Y$pd_aw_flooded_planet$§!修正：\n$pd_aw_flooded_planet_tooltip$"
