--- a/planetary_diversity_arcologies/localisation/english/planetarydiversity_more_arcologies_capital_l_english.yml
+++ b/planetary_diversity_arcologies/localisation/english/planetarydiversity_more_arcologies_capital_l_english.yml
@@ -34,3 +34,8 @@
  decision_pd_machine_centralized_processing_effects: "Adds the §Y$d_pd_machine_centralized_processing$§! to this capital, exhanging potential distrticts to enhance our administration capabilities."
  d_pd_machine_centralized_processing: "Centralized Processing Unit"
  d_pd_machine_centralized_processing_desc: "This processing unit dominates the planetary surface and is the central node for our collective directives, intricately orchestrating our drones."
+
+#4.0 and Beyond
+ district_pd_garden_arcology_housing:0 "Garden Arcology"
+ district_pd_garden_arcology_housing_plural:0 "Garden Arcologies"
+ district_pd_garden_arcology_housing_desc:0 "Arcology, but with Parks. Much green."
