--- a/planetary_diversity_arcologies/localisation/simp_chinese/planetarydiversity_more_arcologies_capital_l_simp_chinese.yml
+++ b/planetary_diversity_arcologies/localisation/simp_chinese/planetarydiversity_more_arcologies_capital_l_simp_chinese.yml
@@ -24,3 +24,6 @@
  decision_pd_machine_centralized_processing_effects: "在首都添加§Y$d_pd_machine_centralized_processing$§!，转化未开发区划以提升政府的行政能力。"
  d_pd_machine_centralized_processing: "中枢处理器"
  d_pd_machine_centralized_processing_desc: "这一处理单元支配着星球地表，乃是我们的核心集体指令中枢，统筹协调复杂的子个体活动。"
+ district_pd_garden_arcology_housing:0 "花园理想城"
+ district_pd_garden_arcology_housing_plural:0 "理想城原型"
+ district_pd_garden_arcology_housing_desc:0 "带有公园的理想城。绿意盎然。"
