--- a/planetary_diversity_arcologies/localisation/english/planetarydiversity_more_arcologies_l_english.yml
+++ b/planetary_diversity_arcologies/localisation/english/planetarydiversity_more_arcologies_l_english.yml
@@ -57,7 +57,7 @@
  mod_job_pd_robo_ranger_add: "$job_pd_robo_ranger$ Jobs"
  mod_job_pd_robo_ranger_per_pop: "§G+1§! $job_pd_robo_ranger$ Job per $VALUE$ Pops"
  mod_job_pd_robo_ranger_per_pop_short: "\n§G+1§! £mod_job_pd_robo_ranger_add£ per $VALUE$ £pop£"
- job_pd_robo_ranger_effect_desc: "$job_pd_robo_ranger$ $job_pd_robo_ranger_plural$ produce £amenities£ §YAmenities§! and £society_research£ §Y$society_research$§!."
+ job_pd_robo_ranger_effect_desc: "$job_pd_robo_ranger$ $job_pd_robo_ranger_plural$ produce £amenities£ §YAmenities§! and £society_research£ §Y$society_research$§!."
 
 #Buildings
  building_pd_rogue_council: "Bio-Trophy Council"
@@ -172,3 +172,32 @@
  decision_pd_garden_arcology_project_effects: "Turns the planet into an §Y$pc_city$§! increasing §YResource Production§! and §YPop Growth§!.\nEnables £district£ Arcology Districts:$TABBED_NEW_LINE$- §Y$district_arcology_civilian_industry$§!$TABBED_NEW_LINE$- §Y$district_pd_arcology_research$§!$TABBED_NEW_LINE$- §Y$district_arcology_leisure$§!$TABBED_NEW_LINE$- §Y$district_arcology_administrative$§!\nDisables £district£ Districts:$TABBED_NEW_LINE$- §Y$district_generator$§! $TABBED_NEW_LINE$- §Y$district_mining$§!$TABBED_NEW_LINE$- §Y$district_farming$§!"
  decision_pd_miltary_arcology_project_effects: "Turns the planet into an §Y$pc_city$§! increasing §YResource Production§! and §YPop Growth§!.\nEnables £district£ Arcology Districts:$TABBED_NEW_LINE$- §Y$district_arcology_arms_industry$§!$TABBED_NEW_LINE$- §Y$district_pd_arcology_naval$§!$TABBED_NEW_LINE$- §Y$district_arcology_leisure$§!$TABBED_NEW_LINE$- §Y$district_arcology_administrative$§!\nDisables £district£ Districts:$TABBED_NEW_LINE$- §Y$district_generator$§! $TABBED_NEW_LINE$- §Y$district_mining$§!$TABBED_NEW_LINE$- §Y$district_farming$§!"
  decision_pd_commerical_arcology_project_effects: "Turns the planet into an §Y$pc_city$§! increasing §YResource Production§! and §YPop Growth§!.\nEnables £district£ Arcology Districts:$TABBED_NEW_LINE$- §Y$district_pd_arcology_industrial$§!$TABBED_NEW_LINE$- §Y$district_arcology_pd_trade$§!$TABBED_NEW_LINE$- §Y$district_arcology_leisure$§!$TABBED_NEW_LINE$- §Y$district_arcology_administrative$§!\nDisables £district£ Districts:$TABBED_NEW_LINE$- §Y$district_generator$§! $TABBED_NEW_LINE$- §Y$district_mining$§!$TABBED_NEW_LINE$- §Y$district_farming$§!"
+
+ #4.0 and Beyond
+ #Garden Arc Tooltip
+ decision_garden_arcology_project_effects: "Converts the planet into an §Y$pc_city$§!, boosting £housing£ §Y$PLANET_HOUSING_TITLE$§!, §YResource Production§!, and §YPop Growth§!. Unlocks special £district£ §YGarden Arcology Districts§!, but renders all natural resources §Rinaccessible§!, permanently disabling the construction of £district£ §YGenerator§!, §YMining§!, and §YAgriculture Districts§!. §YIndustrial Specializations§! and related buildings will be §Rremoved§! and §Rblocked§! from construction."
+ #Garden Districts
+ district_pd_garden_arcology_housing: "Garden Arcology"
+ district_pd_garden_arcology_housing_plural: "Garden Arcologies"
+ district_pd_garden_arcology_housing_desc: "These arcologies blend ecological harmony with urban sophistication, offering advanced infrastructure, vertical living, and expansive idyllic green spaces."
+ district_pd_garden_arcology_urban_1: "Preserve Arcology"
+ district_pd_garden_arcology_urban_1_plural: "Preserve Arcologies"
+ district_pd_garden_arcology_urban_1_desc: "This expansive preserve is a meticulously curated ecosystem, designed to counterbalance the extreme urbanization of the ecumenopolis with vital ecological function and care."
+ district_pd_garden_arcology_urban_2: "Specialized Arcology 1"
+ district_pd_garden_arcology_urban_2_plural: "Specialized Arcology 1"
+ district_pd_garden_arcology_urban_2_desc: "$district_arcology_housing_desc$"
+ district_pd_garden_arcology_urban_3: "Specialized Arcology 1"
+ district_pd_garden_arcology_urban_3_plural: "Specialized Arcology 2"
+ district_pd_garden_arcology_urban_3_desc: "$district_arcology_housing_desc$"
+ mod_district_pd_garden_arcology_urban_1_max: "Max $district_pd_garden_arcology_urban_1_plural$"
+ #Zones
+ zone_pd_preserve: "The Preserve"
+ zone_pd_preserve_desc: "The Preserve is a delicate ecosystem, unsuited for industrial development and capable only of supporting low-impact structures dedicated to research, education, or entertainment."
+ #Jobs
+ job_pd_park_ranger: "Preserve Steward"
+ job_pd_park_ranger_plural: "Preserve Stewards"
+ job_pd_park_ranger_desc: "Highly specialzied botanists and landscape specialists who monitor biodiversity, guide ecological succession, and ensure the preserve's delicate balance is maintained amidst the pressures of surrounding urbanization."
+ mod_job_pd_park_ranger_add: "$job_pd_park_ranger$ Job"
+ mod_job_pd_park_ranger_per_pop: "§G+1§! $job_pd_park_ranger$ Job per $VALUE$ Pops"
+ mod_job_pd_park_ranger_per_pop_short: "\n§G+1§! £mod_job_pd_park_ranger_add£ per $VALUE$ £pop£"
+ job_pd_park_ranger_effect_desc: "£job_pd_park_ranger£ $job_pd_park_ranger_plural$ turn £consumer_goods£ §Y$consumer_goods$§! into £society£ §YResearch Points§!, £unity£ §Y$unity$§! and £amenities£ §YAmenities§!."
