--- a/planetary_diversity_arcologies/localisation/simp_chinese/planetarydiversity_more_arcologies_l_simp_chinese.yml
+++ b/planetary_diversity_arcologies/localisation/simp_chinese/planetarydiversity_more_arcologies_l_simp_chinese.yml
@@ -140,3 +140,26 @@
  decision_pd_garden_arcology_project_effects: "将星球转变为§Y$pc_city$§!，提升§Y资源产出§!和§Y人口增长§!。\n启用£district£理想城区划：$TABBED_NEW_LINE$—§Y$district_arcology_civilian_industry$§!$TABBED_NEW_LINE$—§Y$district_pd_arcology_research$§!$TABBED_NEW_LINE$—§Y$district_arcology_leisure$§!$TABBED_NEW_LINE$—§Y$district_arcology_administrative$§!\n禁用£district£区划：$TABBED_NEW_LINE$—§Y$district_generator$§!$TABBED_NEW_LINE$—§Y$district_mining$§!$TABBED_NEW_LINE$—§Y$district_farming$§!"
  decision_pd_miltary_arcology_project_effects: "将星球转变为§Y$pc_city$§!，提升§Y资源产出§!和§Y人口增长§!。\n启用£district£理想城区划：$TABBED_NEW_LINE$—§Y$district_arcology_arms_industry$§!$TABBED_NEW_LINE$—§Y$district_pd_arcology_naval$§!$TABBED_NEW_LINE$—§Y$district_arcology_leisure$§!$TABBED_NEW_LINE$—§Y$district_arcology_administrative$§!\n禁用£district£区划：$TABBED_NEW_LINE$—§Y$district_generator$§!$TABBED_NEW_LINE$—§Y$district_mining$§!$TABBED_NEW_LINE$—§Y$district_farming$§!"
  decision_pd_commerical_arcology_project_effects: "将星球转变为§Y$pc_city$§!，提升§Y资源产出§!和§Y人口增长§!。\n启用£district£理想城区划：$TABBED_NEW_LINE$—§Y$district_pd_arcology_industrial$§!$TABBED_NEW_LINE$—§Y$district_arcology_pd_trade$§!$TABBED_NEW_LINE$—§Y$district_arcology_leisure$§!$TABBED_NEW_LINE$—§Y$district_arcology_administrative$§!\n禁用£district£区划：$TABBED_NEW_LINE$—§Y$district_generator$§!$TABBED_NEW_LINE$—§Y$district_mining$§!$TABBED_NEW_LINE$—§Y$district_farming$§!"
+ decision_garden_arcology_project_effects: "将行星转化为§Y$pc_city$§!，提升£housing£§Y$PLANET_HOUSING_TITLE$§!、§Y资源产出§!和§Y人口增长速度§!。解锁特殊£district£§Y花园理想城区划§!，但是所有天然资源都会变为§R不可开发§!，永久禁用£district£§Y发电§!、§Y采矿§!与§Y农业区划§!的建造。§Y工业特化§!及相关建筑将被§R移除§!并§R禁止建造§!。"
+ district_pd_garden_arcology_housing: "花园理想城"
+ district_pd_garden_arcology_housing_plural: "花园理想城"
+ district_pd_garden_arcology_housing_desc: "这些理想城将生态和谐与都市繁华融为一体，带来先进的基础设施、垂直式生活空间与广袤的田园绿野。"
+ district_pd_garden_arcology_urban_1: "保护区理想城"
+ district_pd_garden_arcology_urban_1_plural: "保护区理想城"
+ district_pd_garden_arcology_urban_1_desc: "这片辽阔的保护区是一个经过精心维护的生态系统，旨在通过关键的生态机能与关怀来平衡普世城的极端都市化。"
+ district_pd_garden_arcology_urban_2: "特化理想城01"
+ district_pd_garden_arcology_urban_2_plural: "特化理想城01"
+ district_pd_garden_arcology_urban_2_desc: "$district_arcology_housing_desc$"
+ district_pd_garden_arcology_urban_3: "特化理想城01"
+ district_pd_garden_arcology_urban_3_plural: "特化理想城02"
+ district_pd_garden_arcology_urban_3_desc: "$district_arcology_housing_desc$"
+ mod_district_pd_garden_arcology_urban_1_max: "$district_pd_garden_arcology_urban_1_plural$上限"
+ zone_pd_preserve: "保护区"
+ zone_pd_preserve_desc: "保护区是一个脆弱的生态系统，不适合工业开发，仅能承载用于科研、教育或娱乐的低负荷设施。"
+ job_pd_park_ranger: "保护区管理员"
+ job_pd_park_ranger_plural: "保护区管理员"
+ job_pd_park_ranger_desc: "高度专业的植物学家与景观专家，负责监测生物多样性、引导生态演替，并在周边城市的压力下确保保护区的微妙平衡得以维持。"
+ mod_job_pd_park_ranger_add: "$job_pd_park_ranger$岗位"
+ mod_job_pd_park_ranger_per_pop: "每$VALUE$人口§G+1§!$job_pd_park_ranger$岗位"
+ mod_job_pd_park_ranger_per_pop_short: "\n每$VALUE$£pop£§G+1§!£mod_job_pd_park_ranger_add£"
+ job_pd_park_ranger_effect_desc: "£job_pd_park_ranger£$job_pd_park_ranger_plural$将£consumer_goods£§Y$consumer_goods$§!转化为£society£§Y研究点数§!、£unity£§Y$unity$§!和£amenities£§Y舒适度§!。"
