--- a/planetary_diversity_arcologies/localisation/simp_chinese/planetarydiversity_more_arcologies_l_simp_chinese.yml
+++ b/planetary_diversity_arcologies/localisation/simp_chinese/planetarydiversity_more_arcologies_l_simp_chinese.yml
@@ -180,9 +180,9 @@
  district_pd_commercial_arcology_housing: "零售枢纽理想城"
  district_pd_commercial_arcology_housing_desc: "这些理想城将高端生活与商业融为一体，上层矗立着流线型塔楼，下层则分布着购物大道、水疗中心与娱乐中心。对于财力充足者而言，这座综合设施内部处处彰显着轻松写意的奢华度假生活。"
  district_pd_commercial_arcology_housing_plural: "零售枢纽理想城"
- district_pd_commercial_arcology_urban_1: "核心交易理想城"
+ district_pd_commercial_arcology_urban_1: "集中交易理想城"
  district_pd_commercial_arcology_urban_1_desc: "这些理想城汇集了星际商务，设有企业办公室、证券交易所、泊地和供应中心纽，以维持货物与信用点的持续流通。"
- district_pd_commercial_arcology_urban_1_plural: "核心交易理想城"
+ district_pd_commercial_arcology_urban_1_plural: "集中交易理想城"
  district_pd_commercial_arcology_urban_2: "特化理想城01"
  district_pd_commercial_arcology_urban_2_desc: "$district_arcology_housing_desc$"
  district_pd_commercial_arcology_urban_2_plural: "特化理想城01"
