--- a/planetary_diversity/localisation/braz_por/planetarydiversity_domed_colonies_l_braz_por.yml
+++ b/planetary_diversity/localisation/braz_por/planetarydiversity_domed_colonies_l_braz_por.yml
@@ -153,7 +153,7 @@
  pddomebases.100.foundry: "Base Cúpula de Fundição"
  pddomebases.100.foundry.tt: "Esta base lunar em forma de cúpula se fixará ao planeta §Y$d_pd_solar_system_network_hub$§!, concedendo £job_foundry£ §Y[GetAlloyProducerPlural]§! adicional para às colônias conectadas."
  pddomebases.100.admin: "Base Cúpula Administrativa"
- pddomebases.100.admin.tt: "Esta base lunar em forma de cúpula se fixará ao planeta §Y$d_pd_solar_system_network_hub$§!, concedendo [GetAdministratorWithIcon] adicional para às colônias conectadas."
+ pddomebases.100.admin.tt: "Esta base lunar em forma de cúpula se fixará ao planeta §Y$d_pd_solar_system_network_hub$§!, concedendo [GetBureaucratWithIcon] adicional para às colônias conectadas."
  pddomebases.100.priest: "Base Cúpula Eclesiástica"
  pddomebases.100.priest.tt: "$pddomebases.100.admin.tt$"
 
