--- a/planetary_diversity/localisation/german/planetarydiversity_domed_colonies_l_german.yml
+++ b/planetary_diversity/localisation/german/planetarydiversity_domed_colonies_l_german.yml
@@ -154,7 +154,7 @@
  pddomebases.100.foundry: Gießerei Mondbasis"
  pddomebases.100.foundry.tt: "Diese Mondbasis wird mit dem §Y$d_pd_solar_system_network_hub$§!, auf der Planetenseite verbunden und gewährt zusätzliche £job_foundry£ §Y[GetAlloyProducerPlural]§! in verbundenen Kolonien."
  pddomebases.100.admin: "Administrative Mondbasis"
- pddomebases.100.admin.tt: "Diese Mondbasis wird mit dem §Y$d_pd_solar_system_network_hub$§!, auf der Planetenseite verbunden und gewährt zusätzliche [GetAdministratorWithIcon] in verbundenen Kolonien."
+ pddomebases.100.admin.tt: "Diese Mondbasis wird mit dem §Y$d_pd_solar_system_network_hub$§!, auf der Planetenseite verbunden und gewährt zusätzliche [GetBureaucratWithIcon] in verbundenen Kolonien."
  pddomebases.100.priest: "Spirituelle Mondbasis"
  pddomebases.100.priest.tt: "$pddomebases.100.admin.tt$"
 
