--- a/planetary_diversity/localisation/korean/planetarydiversity_domed_colonies_l_korean.yml
+++ b/planetary_diversity/localisation/korean/planetarydiversity_domed_colonies_l_korean.yml
@@ -154,7 +154,7 @@
  pddomebases.100.foundry: "주조 위성 기지"
  pddomebases.100.foundry.tt: "이 위성 돔형 기지는 행성 표면의 §Y$d_pd_solar_system_network_hub$§!에 연결되며, 연결된 식민지에 추가 £job_foundry£ §Y[GetAlloyProducerPlural]§!를 제공합니다."
  pddomebases.100.admin: "행정 위성 기지"
- pddomebases.100.admin.tt: "이 위성 돔형 기지는 행성 표면의 §Y$d_pd_solar_system_network_hub$§!에 연결되며, 연결된 식민지에 추가 [GetAdministratorWithIcon]를 제공합니다."
+ pddomebases.100.admin.tt: "이 위성 돔형 기지는 행성 표면의 §Y$d_pd_solar_system_network_hub$§!에 연결되며, 연결된 식민지에 추가 [GetBureaucratWithIcon]를 제공합니다."
  pddomebases.100.priest: "사원 위성 기지"
  pddomebases.100.priest.tt: "$pddomebases.100.admin.tt$"
 
