--- a/planetary_diversity/localisation/russian/planetarydiversity_domed_colonies_l_russian.yml
+++ b/planetary_diversity/localisation/russian/planetarydiversity_domed_colonies_l_russian.yml
@@ -154,7 +154,7 @@
  pddomebases.100.foundry: "Литейная лунная база"
  pddomebases.100.foundry.tt: "Эта купольная лунная база будет связана с местным §Yсистемным хабом§! и обеспечит дополнительные должности £job_foundry£ §Y[GetAlloyProducerPlural]§! в сопряжённых колониях."
  pddomebases.100.admin: "Административная лунная база"
- pddomebases.100.admin.tt: "Эта купольная лунная база будет связана с местным §Yсистемным хабом§! и обеспечит дополнительные должности [GetAdministratorWithIcon] в сопряжённых колониях."
+ pddomebases.100.admin.tt: "Эта купольная лунная база будет связана с местным §Yсистемным хабом§! и обеспечит дополнительные должности [GetBureaucratWithIcon] в сопряжённых колониях."
  pddomebases.100.priest: "Священническая лунная база"
  pddomebases.100.priest.tt: "$pddomebases.100.admin.tt$"
 
