--- a/planetary_diversity/localisation/simp_chinese/planetarydiversity_domed_colonies_l_simp_chinese.yml
+++ b/planetary_diversity/localisation/simp_chinese/planetarydiversity_domed_colonies_l_simp_chinese.yml
@@ -124,7 +124,7 @@
  pddomebases.100.foundry: "铸造外围基地（卫星）"
  pddomebases.100.foundry.tt: "这一外围基地（卫星）会对接行星上的§Y$d_pd_solar_system_network_hub$§!，为与之联系的殖民地提供额外的£job_foundry£ §Y[GetAlloyProducerPlural]§!。"
  pddomebases.100.admin: "行政外围基地（卫星）"
- pddomebases.100.admin.tt: "这一外围基地（卫星）会对接行星上的§Y$d_pd_solar_system_network_hub$§!，为与之联系的殖民地提供额外的[GetAdministratorWithIcon]。"
+ pddomebases.100.admin.tt: "这一外围基地（卫星）会对接行星上的§Y$d_pd_solar_system_network_hub$§!，为与之联系的殖民地提供额外的[GetBureaucratWithIcon]。"
  pddomebases.100.priest: "教会外围基地（卫星）"
  pddomebases.100.priest.tt: "$pddomebases.100.admin.tt$"
  origin_pd_interplanetary_settlers: "行星际殖民"
