--- a/planetary_diversity/localisation/simp_chinese/planetarydiversity_l_simp_chinese.yml
+++ b/planetary_diversity/localisation/simp_chinese/planetarydiversity_l_simp_chinese.yml
@@ -192,3 +192,9 @@
  pd_nemma_desc: "该星球的岛屿实际上是巨大的，拥有矿物外壳的两栖爬行动物。这些漂浮在海面上的家伙名为“内玛”，只要不去招惹，它们就全然无害。"
  pd_alpha_centauri: "喀戎星球"
  pd_alpha_centauri_desc: "这颗星球被恣意生长的外星真菌覆盖，同时受到极端天气和不稳定地震活动的困扰。尽管存在上述恶劣条件，这里丰富的资源和坚韧的生物圈，却为科研和探索活动提供了宝贵的机遇。\n\n译注：该名称意在致敬《席德梅尔的半人马座阿尔法星》，该游戏中有一颗同样位于南门二／半人马座α星系的同名宜居星球。"
+
+ #Zones
+ zone_pd_hive_spawning: "Spawning Zone"
+ zone_pd_hive_spawning_desc: "A zone dedicated to the spawning of new drones."
+ zone_pd_machine_replication: "Assembly Zone"
+ zone_pd_machine_replication_desc: "A zone dedicated to the construction of new machine units."
