--- a/planetary_diversity_arcologies/localisation/english/planetarydiversity_more_arcologies_l_english.yml
+++ b/planetary_diversity_arcologies/localisation/english/planetarydiversity_more_arcologies_l_english.yml
@@ -218,6 +218,9 @@
  district_pd_fortress_arcology_urban_3: "Specialized Arcology 2"
  district_pd_fortress_arcology_urban_3_desc: "$district_arcology_housing_desc$"
  district_pd_fortress_arcology_urban_3_plural: "Specialized Arcology 2"
+ #Zones
+ zone_pd_command_nexus: "Nexus Headquarters"
+ zone_pd_command_nexus_desc: "The headquarters is the central organ of this planet's military administration, upholding the architecture of war through strategic planning, operational coordination, and uncompromising oversight."
  ##Commerical
  #Tooltip
  decision_commercial_arcology_project_effects: "Converts the planet into an §Y$pc_city$§!, boosting £housing£ §Y$PLANET_HOUSING_TITLE$§!, §YResource Production§!, and §YPop Growth§!. Unlocks special £district£ §YGarden Arcology Districts§!, but renders all natural resources §Rinaccessible§!, permanently disabling the construction of £district£ §YGenerator§!, §YMining§!, and §YAgriculture Districts§!."
