--- a/planetary_diversity/localisation/braz_por/planetarydiversity_l_braz_por.yml
+++ b/planetary_diversity/localisation/braz_por/planetarydiversity_l_braz_por.yml
@@ -213,3 +213,9 @@
  #Alpha Centauri
  pd_alpha_centauri: "Chiron World"
  pd_alpha_centauri_desc: "The planet is covered in xeno-fungal growths and plagued by extreme weather and seismic instability. Despite these hazards, its rich resources and resilient biosphere offer valuable opportunities for research and exploitation."
+
+ #Zones
+ zone_pd_hive_spawning: "Spawning Zone"
+ zone_pd_hive_spawning_desc: "A zone dedicated to the spawning of new drones."
+ zone_pd_machine_replication: "Assembly Zone"
+ zone_pd_machine_replication_desc: "A zone dedicated to the construction of new machine units."
