--- a/planetary_diversity/localisation/english/planetarydiversity_domed_colonies_l_english.yml
+++ b/planetary_diversity/localisation/english/planetarydiversity_domed_colonies_l_english.yml
@@ -154,7 +154,7 @@
  pddomebases.100.foundry: "Foundry Moon Outpost"
  pddomebases.100.foundry.tt: "This moon outpost will connect to the planetside §Y$d_pd_solar_system_network_hub$§!, granting additional £job_foundry£ §Y[GetAlloyProducerPlural]§! on connected colonies."
  pddomebases.100.admin: "Administrative Moon Outpost"
- pddomebases.100.admin.tt: "This moon outpost will connect to the planetside §Y$d_pd_solar_system_network_hub$§!, granting additional [GetAdministratorWithIcon] on connected colonies."
+ pddomebases.100.admin.tt: "This moon outpost will connect to the planetside §Y$d_pd_solar_system_network_hub$§!, granting additional [GetBureaucratWithIcon] on connected colonies."
  pddomebases.100.priest: "Ecclesiastical Moon Outpost"
  pddomebases.100.priest.tt: "$pddomebases.100.admin.tt$"
 
