--- a/planetary_diversity/localisation/japanese/planetarydiversity_domed_colonies_l_japanese.yml
+++ b/planetary_diversity/localisation/japanese/planetarydiversity_domed_colonies_l_japanese.yml
@@ -154,7 +154,7 @@
  pddomebases.100.foundry: "Foundry Moon Base"
  pddomebases.100.foundry.tt: "This domed moon base will connect to the planetside §Y$d_pd_solar_system_network_hub$§!, granting additional £job_foundry£ §Y[GetAlloyProducerPlural]§! on connected colonies."
  pddomebases.100.admin: "Administrative Moon Base"
- pddomebases.100.admin.tt: "This domed moon base will connect to the planetside §Y$d_pd_solar_system_network_hub$§!, granting additional [GetAdministratorWithIcon] on connected colonies."
+ pddomebases.100.admin.tt: "This domed moon base will connect to the planetside §Y$d_pd_solar_system_network_hub$§!, granting additional [GetBureaucratWithIcon] on connected colonies."
  pddomebases.100.priest: "Ecclesiastical Moon Base"
  pddomebases.100.priest.tt: "$pddomebases.100.admin.tt$"
 
