--- a/planetary_diversity_uniques/localisation/russian/pd_uniques_l_russian.yml
+++ b/planetary_diversity_uniques/localisation/russian/pd_uniques_l_russian.yml
@@ -126,7 +126,7 @@
  pdcrystal.252.a: "Is the colony at risk?"
  pdcrystal.253.desc: "The study revealed that the crystal is a lithoid superorganism with rudimentary intelligence, using the Acean to lure animals into hidden sinkholes. The Khels drilled boreholes and an electromagnetic pulse to disrupt its feeding while preserving the crystal's properties.\n\nWe have also uncovered the control center for the borehole project."
  pdcrystal.253.a: "How desperate they must have been."
- pdcrystal.254.desc: "The Khel's boreholes only hastened the planet's feeding, perhaps as a defense mechanism. By the time they were ready to fire their weapon, only a few dozen Khel remained. After the detonation, the planet released a massive surge of energy, and all records from the Khel abruptly ceased.\n\nThough the Khels didn't survive to witness it, they were correct: the planet had lost its ability to feed one life. This is the grim source of the Acean crystal's powers."
+ pdcrystal.254.desc: "The Khel's boreholes only hastened the planet's feeding, perhaps as a defense mechanism. By the time they were ready to fire their weapon, only a few dozen Khel remained. After the detonation, the planet released a massive surge of energy, and all records from the Khel abruptly ceased.\n\nThough the Khels didn't survive to witness it, they were correct: the planet had lost its ability to feed upon life. This is the grim source of the Acean crystal's powers."
  pdcrystal.254.a: "What a grim end for everyone."
 
  #Origin
